# keep-sorted-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-test.yaml  publish.yaml
src/keep_sorted/: __init__.py
