[project]
name = "keep-sorted"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vasiliy Poverennov", email = "vasiliy@poverennov.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
